# autotools-skel

./: .editorconfig  .gitignore  Makefile.am  README  aminclude.am  configure.ac
src/: Makefile.am  main.c
tests/: Makefile.am  tests.c
